removing unnecessary left alignment (that are illegal on divs too)

--- a/WebpageDevelopment/index.html
+++ b/WebpageDevelopment/index.html
@@ -423,7 +423,7 @@
             <div class="col-sm-6 sm-margin-bottom-40">
               <div class="funny-boxes funny-boxes-top-red">
                 <div class="row">
-                  <div class="col-md-4 funny-boxes-img" align="left">
+                  <div class="col-md-4 funny-boxes-img">
                     <img class="img-responsive" src="assets/img/team/david_bard.jpg" alt="David Bard">
                     <ul class="list-unstyled">
                       <li><i class="fa-fw fa fa-comment-o"></i><a href="mailto:david-bard@ouhsc.edu">Email</a></li>
@@ -448,7 +448,7 @@
               <div class="col-sm-6 sm-margin-bottom-40">
                 <div class="funny-boxes funny-boxes-top-red">
                   <div class="row">
-                    <div class="col-md-4 funny-boxes-img" align="left">
+                    <div class="col-md-4 funny-boxes-img">
                       <img class="img-responsive" src="assets/img/team/william_beasley.jpg" alt="Will Beasley">
                       <ul class="list-unstyled">
                         <li><i class="fa-fw fa fa-comment-o"></i><a href="whb4@ou.edu">Email</a></li>
@@ -477,7 +477,7 @@
             <div class="col-sm-6 sm-margin-bottom-40">
               <div class="funny-boxes funny-boxes-top-red">
                 <div class="row">
-                  <div class="col-md-4 funny-boxes-img" align="left">
+                  <div class="col-md-4 funny-boxes-img">
                     <img class="img-responsive" src="assets/img/team/michael_anderson.jpg" alt="Mike Anderson">
                     <ul class="list-unstyled">
                       <li><i class="fa-fw fa fa-comment-o"></i><a href="mailto:Michael-Anderson@ouhsc.edu">Email</a></li>
@@ -500,18 +500,15 @@
               </div>
             </div>
             <div class="container-fluid">
-
               <div class="col-sm-6 sm-margin-bottom-40">
                 <div class="funny-boxes funny-boxes-top-red">
                   <div class="row">
-                    <div class="col-md-4 funny-boxes-img" align="left">
+                    <div class="col-md-4 funny-boxes-img">
                       <img class="img-responsive" src="assets/img/team/david_thompson.jpg" alt="David Thompson">
                       <ul class="list-unstyled">
                         <li><i class="fa-fw fa fa-comment-o"></i><a href="mailto:david-thompson@ouhsc.edu">Email</a></li>
                         <li><i class="fa-fw fa fa-bookmark"></i><a href="http://moon.ouhsc.edu/dthompso/">OUHSC Faculty Page</a></li>
                       </ul>
-
-
                     </div>
                     <div class="col-md-8">
                       <h2>David M. Thompson, PhD</h2>
@@ -539,7 +536,7 @@
             <div class="col-sm-6 sm-margin-bottom-40">
               <div class="funny-boxes funny-boxes-top-red">
                 <div class="row">
-                  <div class="col-md-4 funny-boxes-img" align="left">
+                  <div class="col-md-4 funny-boxes-img">
                     <img class="img-responsive" src="assets/img/team/chris_aston.jpg" alt="Christopher Aston">
                     <ul class="list-unstyled">
                       <li><i class="fa-fw fa fa-comment-o"></i><a href="mailto:christopher-aston@ouhsc.edu">Email</a>
@@ -564,7 +561,7 @@
               <div class="col-sm-6 sm-margin-bottom-40">
                 <div class="funny-boxes funny-boxes-top-red">
                   <div class="row">
-                    <div class="col-md-4 funny-boxes-img" align="left">
+                    <div class="col-md-4 funny-boxes-img">
                       <img class="img-responsive" src="assets/img/team/thomas_wilson.jpg" alt="Thomas Wilson">
                       <ul class="list-unstyled">
                         <li><i class="fa-fw fa fa-comment-o"></i><a href="mailto:thomas-wilson@ouhsc.edu">Email</a>
@@ -586,7 +583,7 @@
               <div class="col-sm-6 sm-margin-bottom-40">
                 <div class="funny-boxes funny-boxes-top-red">
                   <div class="row">
-                    <div class="col-md-4 funny-boxes-img" align="left">
+                    <div class="col-md-4 funny-boxes-img">
                       <img class="img-responsive" src="assets/img/team/donna_wells.jpg" alt="Donna Wells">
                       <ul class="list-unstyled">
                         <li><i class="fa-fw fa fa-comment-o"></i><a href="mailto:donna-wells@ouhsc.edu">Email</a></li>
@@ -605,7 +602,7 @@
               </div>
               <div class="col-sm-6 sm-margin-bottom-40">
                 <div class="funny-boxes funny-boxes-top-red">
-                  <div class="col-md-4 funny-boxes-img" align="left">
+                  <div class="col-md-4 funny-boxes-img">
                     <img class="img-responsive" src="assets/img/team/geneva_daniel.jpg" alt="Geneva Daniel">
                     <ul class="list-unstyled">
                       <li><i class="fa-fw fa fa-comment-o"></i><a href="mailto:geneva-daniel@ouhsc.edu">Email</a></li>
@@ -629,7 +626,7 @@
                 <div class="col-sm-6 sm-margin-bottom-40">
                   <div class="funny-boxes funny-boxes-top-red">
                     <div class="row">
-                      <div class="col-md-4 funny-boxes-img" align="left">
+                      <div class="col-md-4 funny-boxes-img">
                         <img class="img-responsive" src="assets/img/team/ram_poudel.jpg" alt="Ram Poudel">
                         <ul class="list-unstyled">
                           <li><i class="fa-fw fa fa-comment-o"></i><a href="mailto:Ram-Poudel@ouhsc.edu">Email</a></li>
@@ -652,7 +649,7 @@
                   <div class="col-sm-6 sm-margin-bottom-40">
                     <div class="funny-boxes funny-boxes-top-red">
                       <div class="row">
-                        <div class="col-md-4 funny-boxes-img" align="left">
+                        <div class="col-md-4 funny-boxes-img">
                           <img class="img-responsive" src="assets/img/team/maleeha_shahid.jpg" alt="Maleeha Shahid">
                           <ul class="list-unstyled">
                             <li><i class="fa-fw fa fa-comment-o"></i><a href="mailto:maleeha-shahid@ouhsc.edu">Email</a>
@@ -681,7 +678,7 @@
                 <div class="col-sm-6 sm-margin-bottom-40">
                   <div class="funny-boxes funny-boxes-top-red">
                     <div class="row">
-                      <div class="col-md-4 funny-boxes-img" align="left">
+                      <div class="col-md-4 funny-boxes-img">
                         <img class="img-responsive" src="assets/img/team/michael_hunter.jpg" alt="Mike Hunter">
                         <ul class="list-unstyled">
                           <li><i class="fa-fw fa fa-comment-o"></i><a href="mailto:Michael-Hunter@ouhsc.edu">Email</a></li>
@@ -706,7 +703,7 @@
                   <div class="col-sm-6 sm-margin-bottom-40">
                     <div class="funny-boxes funny-boxes-top-red">
                       <div class="row">
-                        <div class="col-md-4 funny-boxes-img" align="left">
+                        <div class="col-md-4 funny-boxes-img">
                           <img class="img-responsive" src="assets/img/team/som_bohora.jpg" alt="Som Bohora">
                           <ul class="list-unstyled">
                             <li><i class="fa-fw fa fa-comment-o"></i><a href="mailto:som-bohora@ouhsc.edu">Email</a>
@@ -729,7 +726,7 @@
                     <div class="col-sm-6 sm-margin-bottom-40">
                       <div class="funny-boxes funny-boxes-top-red">
                         <div class="row">
-                          <div class="col-md-4 funny-boxes-img" align="left">
+                          <div class="col-md-4 funny-boxes-img">
                             <img class="img-responsive" src="assets/img/team/zabrina_antry.jpg" alt="Zabrina Antry">
                             <ul class="list-unstyled">
                               <li><i class="fa-fw fa fa-comment-o"></i><a href="mailto:zabrina-antry@ouhsc.edu">Email</a></li>
