replace curvy with straight quotes

--- a/WebpageDevelopment/index.html
+++ b/WebpageDevelopment/index.html
@@ -521,7 +521,7 @@
                       <h2>David M. Thompson, PhD</h2>
                       <h4>Biostatistician</h4>
                       <p>
-                        <strong>David M. Thompson</strong> is an Associate Professor in the Department of Biostatistics and Epidemiology, University of Oklahoma Health Sciences Center. He also serves as Associate Director of the department’s Research Design
+                        <strong>David M. Thompson</strong> is an Associate Professor in the Department of Biostatistics and Epidemiology, University of Oklahoma Health Sciences Center. He also serves as Associate Director of the department's Research Design
                         and Analysis Center (<a href="http://ouhsc.edu/bserdac/">BSE RDAC</a>) and director of the Training Unit within the Oklahoma Shared Clinical and Translational Resource (<a href="http://osctr.ouhsc.edu/">OSCTR</a>). He teaches
                         courses in applied linear statistical models, nonparametric statistics, and longitudinal data analysis. His research interests include longitudinal data analysis and approaches to hierarchical and correlated data. He is part
                         of a team at the OUHSC that develops workshops in evidence-based health care. He provides research design and statistical support to a variety of projects in public health and clinical medicine, many of which employ statistical
@@ -681,7 +681,7 @@
                             of Karachi in Karachi, Pakistan. Ms. Shahid is currently working on her MS in Human Resources. She has taken her United States Medical Licensing Exams 
                             and is ECFMG Certified. She is also a <a href="http://www.oumedicine.com/pediatrics/department-sections/developmental-behavioral-pediatrics/child-study-center/programs-and-clinical-services/lend">LEND</a> fellow.
                           </p>
-                          <p>She works on multiple research studies for OUHSC’s <a href="https://soonersuccess.ouhsc.edu/">Sooner SUCCESS</a> and Section of Developmental and Behavioral Pediatrics.
+                          <p>She works on multiple research studies for OUHSC's <a href="https://soonersuccess.ouhsc.edu/">Sooner SUCCESS</a> and Section of Developmental and Behavioral Pediatrics.
                             She is experienced in study design, development of research
                             instruments, collection, management and analysis of data, interpretation of results, and preparation of reports. 
                             She is also gaining familiarity with qualitative methodology and network analysis.
@@ -867,8 +867,8 @@
                 The group meets the first Tuesday of the month in the Samis Education Center in OU Children's Hospital (please scroll down to the bottom of the
                 <a href="https://github.com/OuhscBbmc/StatisticalComputing">site</a> for more scheduling details).
                 The group is open to anyone interested in the tools used by statisticians and research methodologists. We encourage any students or employees 
-                to participate or present. Alternatively, if there’s a technique that would help your research
-                or assignments, we’ll try to arrange an expert to teach us about it.
+                to participate or present. Alternatively, if there's a technique that would help your research
+                or assignments, we'll try to arrange an expert to teach us about it.
               </p>
             </div>
           </div>
