fixing more violations identified by NetBeans

--- a/WebpageDevelopment/index.html
+++ b/WebpageDevelopment/index.html
@@ -58,7 +58,7 @@
 
           <a class="navbar-brand" href="#intro">
             <span>
-              <img src="assets/img/logos/bbmc_teal.png">
+              <img src="assets/img/logos/bbmc_teal.png" alt="BBMC">
             </span>
           </a>
         </div>
@@ -479,7 +479,6 @@
               </div>
             </div>
           </div>
-          <!------row1---->
           <div class="row">
             <div class="col-sm-6 sm-margin-bottom-40">
               <div class="funny-boxes funny-boxes-top-red">
@@ -538,7 +537,6 @@
               </div>
             </div>
           </div>
-          <!------endrow---->
           <div class="row">
             <div class="col-sm-6 sm-margin-bottom-40">
               <div class="funny-boxes funny-boxes-top-red">
@@ -843,7 +841,7 @@
       <div class="container fluid">
         <div class="col-xs-6">
           <div class="view view-tenth">
-            <img class="img-responsive" src="assets/img/portfolio/dynamic.png" />
+            <img class="img-responsive" src="assets/img/portfolio/dynamic.png" alt="BBMC Informatics"/>
             <div class="mask">
               <h2>BBMC Informatics</h2>
               <p>
@@ -947,7 +945,7 @@
         <br>
         <div class="container" style="min-height:800px;">
           <div class="title-v1">
-            <img src="assets/img/logos/redcap_logo.png">
+            <img src="assets/img/logos/redcap_logo.png" alt="REDCap">
           </div>
           <div class="tab-v1">
             <ul class="nav nav-tabs">
