fixing illegal nesting in REDCap training section

--- a/WebpageDevelopment/index.html
+++ b/WebpageDevelopment/index.html
@@ -960,21 +960,19 @@
               <div class="tab-pane fade in active" id="overview">
                 <div class="row">
                   <div class="col-md-4">
-                    <div align=center>
-                      <h4>REDCap is supported by:</h4>
-                      <a href="http://www.ouhsc.edu/bbmc/" target="_blank">
-                        <img alt="BBMC" class="img-responsive img-tab-space" src="assets/img/logos/BBMCSquare.png" style="height:180px">
-                      </a>
-                      <a href="http://www.oumedicine.com/collegeofmedicine" target="_blank">
-                        <img alt="OUHSC College of Medicine" class="img-responsive img-tab-space" src="assets/img/logos/com_logo.png">
-                      </a>
-                      <a href="http://osctr.ouhsc.edu/" target="_blank">
-                        <img alt="OSCTR" class="img-responsive img-tab-space" src="assets/img/logos/OSCTR_Logo.gif" style="height:100px">
-                      </a>
-                      <a href="http://octsi.ouhsc.edu/" target="_blank">
-                        <img alt="CTSI" class="img-responsive img-tab-space" src="assets/img/logos/CTSI_Logo.gif" style="height:100px">
-                      </a>
-                    </div>
+                    <h4>REDCap is supported by:</h4>
+                    <a href="http://www.ouhsc.edu/bbmc/" target="_blank">
+                      <img alt="BBMC" class="img-responsive img-tab-space" src="assets/img/logos/BBMCSquare.png" style="height:180px">
+                    </a>
+                    <a href="http://www.oumedicine.com/collegeofmedicine" target="_blank">
+                      <img alt="OUHSC College of Medicine" class="img-responsive img-tab-space" src="assets/img/logos/com_logo.png">
+                    </a>
+                    <a href="http://osctr.ouhsc.edu/" target="_blank">
+                      <img alt="OSCTR" class="img-responsive img-tab-space" src="assets/img/logos/OSCTR_Logo.gif" style="height:100px">
+                    </a>
+                    <a href="http://octsi.ouhsc.edu/" target="_blank">
+                      <img alt="CTSI" class="img-responsive img-tab-space" src="assets/img/logos/CTSI_Logo.gif" style="height:100px">
+                    </a>
                   </div>
                   <div class="col-md-8">
                     <h4>REDCap Overview</h4>
@@ -1036,55 +1034,62 @@
                 <p>For those that are new to REDCap, there are many resources available to introduce you to REDCap and get you started. Among these training resources:
                 </p>
                 <ul>
-                  <li>OUHSC Resources</li>
-                  <ul>
-                    <li>Request individual training tutorials from the <a href="mailto:thomas-wilson@ouhsc.edu?subject=Training Tutorial">REDCap staff</a></li>
-                    <li>Access the <a href="https://miechvprojects.ouhsc.edu/redcap/BBMC/REDCap101Manual.docx" target="_blank">REDCap 101 Training Manual</a></li>
-                  </ul>
-                  <li>REDCap Consortium Resources</li>
-                  <ul>
-                    <li>Overview</li>
+                  <li>OUHSC Resources
                     <ul>
-                      <li><a href="http://redcap.vanderbilt.edu/consortium/videoplayer.php?video=redcap_overview_brief01.flv&amp;title=Brief+Overview+of+REDCap+%284+min%29&amp;text=This+quick+4-minute+video+gives+a+quick+run-down+of+what+REDCap+is+and+what+it+can+do.&amp;referer=REDCAP_PUBLIC" 
-                             target="_blank">Brief Overview of REDCap (4 min)</a>
+                      <li>Request individual training tutorials from the <a href="mailto:thomas-wilson@ouhsc.edu?subject=Training Tutorial">REDCap staff</a></li>
+                      <li>Access the <a href="https://miechvprojects.ouhsc.edu/redcap/BBMC/REDCap101Manual.docx" target="_blank">REDCap 101 Training Manual</a></li>
+                    </ul>
+                  </li>
+                  <li>REDCap Consortium Resources
+                    <ul>
+                      <li>Overview
+                        <ul>
+                          <li><a href="http://redcap.vanderbilt.edu/consortium/videoplayer.php?video=redcap_overview_brief01.flv&amp;title=Brief+Overview+of+REDCap+%284+min%29&amp;text=This+quick+4-minute+video+gives+a+quick+run-down+of+what+REDCap+is+and+what+it+can+do.&amp;referer=REDCAP_PUBLIC" 
+                                 target="_blank">Brief Overview of REDCap (4 min)</a>
+                          </li>
+                          <li><a href="http://redcap.vanderbilt.edu/consortium/videoplayer.php?video=redcap_overview02.flv&amp;title=Detailed+Overview+of+REDCap+%2878+min%29&amp;text=This+78-minute+video+is+targeted+for+REDCap+administrators+for+explaining+REDCap+to+users+%0A%09%09%09%09%09%09%09%09%09at+their+site.+It+provides+a+thorough+overview+of+REDCap+4.6+and+much+of+its+functionality.+%0A%09%09%09%09%09%09%09%09%09This+video+is+an+excellent+place+to+begin+learning+about+REDCap+and+what+it+is+capable+of.&amp;referer=REDCAP_PUBLIC"
+                                 target="_blank">Detailed Overview of REDCap (78 min)</a>
+                          </li>
+                        </ul>
                       </li>
-                      <li><a href="http://redcap.vanderbilt.edu/consortium/videoplayer.php?video=redcap_overview02.flv&amp;title=Detailed+Overview+of+REDCap+%2878+min%29&amp;text=This+78-minute+video+is+targeted+for+REDCap+administrators+for+explaining+REDCap+to+users+%0A%09%09%09%09%09%09%09%09%09at+their+site.+It+provides+a+thorough+overview+of+REDCap+4.6+and+much+of+its+functionality.+%0A%09%09%09%09%09%09%09%09%09This+video+is+an+excellent+place+to+begin+learning+about+REDCap+and+what+it+is+capable+of.&amp;referer=REDCAP_PUBLIC"
-                             target="_blank">Detailed Overview of REDCap (78 min)</a>
+                      <li>Applications and Modules
+                        <ul>
+                          <li><a href="http://redcap.vanderbilt.edu/consortium/videoplayer.php?video=form_editor_upload_dd02.flv&amp;title=The+Online+Designer+and+Data+Dictionary+Upload+%284+min%29&amp;text=&amp;referer=REDCAP_PUBLIC" target="_blank">The Online Designer and Data Dictionary Upload (4 min)</a></li>
+                          <li><a href="https://redcap.vanderbilt.edu/consortium/videoplayer.php?video=online_designer01.flv&amp;title=The+Online+Designer+-+in+depth+%285+min%29&amp;text=&amp;referer=REDCAP_PUBLIC" target="_blank">The Online Designer - in depth (5 min)</a></li>
+                          <li><a href="http://redcap.vanderbilt.edu/consortium/videoplayer.php?video=calendar_and_cal_data_entry01.flv&amp;title=The+Project+Calendar+%285+min%29&amp;text=&amp;referer=REDCAP_PUBLIC" target="_blank">The Project Calendar (5 min)</a></li>
+                          <li><a href="http://redcap.vanderbilt.edu/consortium/videoplayer.php?video=define_events01.flv&amp;title=The+%22Define+My+Events%22+Page+%284+min%29&amp;text=&amp;referer=REDCAP_PUBLIC" target="_blank">The "Define My Events" Page (4 min)</a></li>
+                          <li><a href="http://redcap.vanderbilt.edu/consortium/videoplayer.php?video=scheduling01.flv&amp;title=The+Scheduling+Module+%286+min%29&amp;text=&amp;referer=REDCAP_PUBLIC" target="_blank">The Scheduling Module (6 min)</a></li>
+                          <li><a href="http://redcap.vanderbilt.edu/consortium/videoplayer.php?video=data_access_groups01.flv&amp;title=Data+Access+Groups+%283+min%29&amp;text=Utilized+mostly+for+multi-site+projects%2C+Data+Access+Groups+are+a+good+way+of+creating+user+groups%0A%09%09%09%09%09%09%09%09%09where+different+groups+cannot+view+records+that+belong+to+other+groups.&amp;referer=REDCAP_PUBLIC" target="_blank">Data Access Groups (3 min)</a></li>
+                        </ul>
+                      </li>
+                      <li><a href="http://redcap.vanderbilt.edu/consortium/videoplayer.php?video=project_types01.flv&amp;title=Types+of+REDCap+Projects+%283+min%29&amp;text=&amp;referer=REDCAP_PUBLIC" target="_blank">Types of REDCap Projects (3 min)</a>
+                        <ul>
+                          <li><a href="http://redcap.vanderbilt.edu/consortium/videoplayer.php?video=traditional_project02.flv&amp;title=Classic+Data+Entry+Form+Project+%283+min%29&amp;text=&amp;referer=REDCAP_PUBLIC" target="_blank">Classic Data entry Form Project (3 min)</a></li>
+                          <li><a href="http://redcap.vanderbilt.edu/consortium/videoplayer.php?video=redcap_survey_basics02.flv&amp;title=Single+Survey+Project+%285+min%29&amp;text=&amp;referer=REDCAP_PUBLIC" target="_blank">Single Survey Project (5 min)</a></li>
+                          <li><a href="http://redcap.vanderbilt.edu/consortium/videoplayer.php?video=longitudinal_project02.flv&amp;title=Longitudinal+Data+Entry+Form+Project+%283+min%29&amp;text=&amp;referer=REDCAP_PUBLIC" target="_blank">Longitudinal Data Entry Form Project (3 min)</a></li>
+                          <li><a href="http://redcap.vanderbilt.edu/consortium/videoplayer.php?video=longitudinal_project02.flv&amp;title=Longitudinal+Project+with+Scheduling+%283+min%29&amp;text=&amp;referer=REDCAP_PUBLIC" target="_blank">Longitudinal Project with Scheduling (3 min)</a></li>
+                          <li><a href="http://redcap.vanderbilt.edu/consortium/videoplayer.php?video=operational_project02.flv&amp;title=Using+REDCap+for+Operational+Use+and+Non-clinical+Data+Collection+++%282+min%29&amp;text=&amp;referer=REDCAP_PUBLIC" target="_blank">Using REDCap for Operational Use and Non-clinical Data Collection (2 min)</a>
+                        </ul>
                       </li>
                     </ul>
-                    <li>Applications and Modules</li>
-                    <ul>
-                      <li><a href="http://redcap.vanderbilt.edu/consortium/videoplayer.php?video=form_editor_upload_dd02.flv&amp;title=The+Online+Designer+and+Data+Dictionary+Upload+%284+min%29&amp;text=&amp;referer=REDCAP_PUBLIC" target="_blank">The Online Designer and Data Dictionary Upload (4 min)</a></li>
-                      <li><a href="https://redcap.vanderbilt.edu/consortium/videoplayer.php?video=online_designer01.flv&amp;title=The+Online+Designer+-+in+depth+%285+min%29&amp;text=&amp;referer=REDCAP_PUBLIC" target="_blank">The Online Designer - in depth (5 min)</a></li>
-                      <li><a href="http://redcap.vanderbilt.edu/consortium/videoplayer.php?video=calendar_and_cal_data_entry01.flv&amp;title=The+Project+Calendar+%285+min%29&amp;text=&amp;referer=REDCAP_PUBLIC" target="_blank">The Project Calendar (5 min)</a></li>
-                      <li><a href="http://redcap.vanderbilt.edu/consortium/videoplayer.php?video=define_events01.flv&amp;title=The+%22Define+My+Events%22+Page+%284+min%29&amp;text=&amp;referer=REDCAP_PUBLIC" target="_blank">The "Define My Events" Page (4 min)</a></li>
-                      <li><a href="http://redcap.vanderbilt.edu/consortium/videoplayer.php?video=scheduling01.flv&amp;title=The+Scheduling+Module+%286+min%29&amp;text=&amp;referer=REDCAP_PUBLIC" target="_blank">The Scheduling Module (6 min)</a></li>
-                      <li><a href="http://redcap.vanderbilt.edu/consortium/videoplayer.php?video=data_access_groups01.flv&amp;title=Data+Access+Groups+%283+min%29&amp;text=Utilized+mostly+for+multi-site+projects%2C+Data+Access+Groups+are+a+good+way+of+creating+user+groups%0A%09%09%09%09%09%09%09%09%09where+different+groups+cannot+view+records+that+belong+to+other+groups.&amp;referer=REDCAP_PUBLIC" target="_blank">Data Access Groups (3 min)</a></li>
-                    </ul>
-                    <li><a href="http://redcap.vanderbilt.edu/consortium/videoplayer.php?video=project_types01.flv&amp;title=Types+of+REDCap+Projects+%283+min%29&amp;text=&amp;referer=REDCAP_PUBLIC" target="_blank">Types of REDCap Projects (3 min)</a></li>
-                    <ul>
-                      <li><a href="http://redcap.vanderbilt.edu/consortium/videoplayer.php?video=traditional_project02.flv&amp;title=Classic+Data+Entry+Form+Project+%283+min%29&amp;text=&amp;referer=REDCAP_PUBLIC" target="_blank">Classic Data entry Form Project (3 min)</a></li>
-                      <li><a href="http://redcap.vanderbilt.edu/consortium/videoplayer.php?video=redcap_survey_basics02.flv&amp;title=Single+Survey+Project+%285+min%29&amp;text=&amp;referer=REDCAP_PUBLIC" target="_blank">Single Survey Project (5 min)</a></li>
-                      <li><a href="http://redcap.vanderbilt.edu/consortium/videoplayer.php?video=longitudinal_project02.flv&amp;title=Longitudinal+Data+Entry+Form+Project+%283+min%29&amp;text=&amp;referer=REDCAP_PUBLIC" target="_blank">Longitudinal Data Entry Form Project (3 min)</a></li>
-                      <li><a href="http://redcap.vanderbilt.edu/consortium/videoplayer.php?video=longitudinal_project02.flv&amp;title=Longitudinal+Project+with+Scheduling+%283+min%29&amp;text=&amp;referer=REDCAP_PUBLIC" target="_blank">Longitudinal Project with Scheduling (3 min)</a></li>
-                      <li><a href="http://redcap.vanderbilt.edu/consortium/videoplayer.php?video=operational_project02.flv&amp;title=Using+REDCap+for+Operational+Use+and+Non-clinical+Data+Collection+++%282+min%29&amp;text=&amp;referer=REDCAP_PUBLIC" target="_blank">Using REDCap for Operational Use and Non-clinical Data Collection (2 min)</a>
-                    </ul>
-                  </ul>
+                  </li>
                 </ul>
                 <h4>Advanced Training Resources</h4>
                 <p>For REDCap users needing more in-depth training:
                 </p>
                 <ul>
-                  <li>OUHSC Resources</li>
-                  <ul>
-                    <li>Access the <a href="https://miechvprojects.ouhsc.edu/redcap/BBMC/REDCap201Manual.docx" target="_blank">REDCap 201 Training Manual</a></li>
-                    <li><a href="https://github.com/OuhscBbmc/RedcapExample" target="_blank">BBMC Public Github Repository (REDCap Example)</a></li>
-                    <li><a href="https://github.com/OuhscBbmc/RedcapGovernanceDocs" target="_blank">BBMC Public Github Repository (REDCap Governance Documents)</a></li>
-                  </ul>
-                  <li>Online Training</li>
-                  <ul>
-                    <li><a href="https://www.coursera.org/course/datamanagement" target="_blank">Coursera Data Management Course</a>
-                  </ul>
+                  <li>OUHSC Resources
+                    <ul>
+                      <li>Access the <a href="https://miechvprojects.ouhsc.edu/redcap/BBMC/REDCap201Manual.docx" target="_blank">REDCap 201 Training Manual</a></li>
+                      <li><a href="https://github.com/OuhscBbmc/RedcapExample" target="_blank">BBMC Public Github Repository (REDCap Example)</a></li>
+                      <li><a href="https://github.com/OuhscBbmc/RedcapGovernanceDocs" target="_blank">BBMC Public Github Repository (REDCap Governance Documents)</a></li>
+                    </ul>
+                  </li>
+                  <li>Online Training
+                    <ul>
+                      <li><a href="https://www.coursera.org/course/datamanagement" target="_blank">Coursera Data Management Course</a>
+                    </ul>
+                  </li>
                 </ul>
               </div>
               <div class="tab-pane fade in" id="help">
