avoid list with HIPAA & IT policies

--- a/WebpageDevelopment/index.html
+++ b/WebpageDevelopment/index.html
@@ -1010,16 +1010,16 @@
                 <h4>Compliance</h4>
                 <p>REDCap has been approved for storage of sensitive data. The Project Owner is responsible for the following:
                 <ul>
-                  <li> Obtain IRB approval prior to using REDCap for studies involving human participant research.</li>
-                  <li> Build the REDCap database (entry forms) in such a way that it corresponds to the study design that will be submitted to the IRB and provides proper data collection tool for all the data necessary for testing study hypothesis (hypotheses).</li>
+                  <li>Obtain IRB approval prior to using REDCap for studies involving human participant research.</li>
+                  <li>Build the REDCap database (entry forms) in such a way that it corresponds to the study design that will be submitted to the IRB and provides proper data collection tool for all the data necessary for testing study hypothesis (hypotheses).</li>
                   <li>Collect all the data necessary for testing study hypothesis (hypotheses)</li>
                   <li>Collect only minimally-necessary set of PHI, in addition to those required by study design or operational requirements, to positively identify study subjects during data entry phase.</li>
-                  <li>In the case of data regarding patient or subjects of OUHSC and her affiliates, all users must comply with HIPAA Privacy Policies and Information Security for Protected Health Information (PHI) and Education Records covered under
-                    the Family Educational Rights and Privacy Act (FERPA)</li>
-                  <ul class="active">
-                    <li><a href="http://www.ouhsc.edu/hipaa">HIPAA</a></li>
-                    <li><a href="http://it.ouhsc.edu/policies">IT Policies</a></li>
-                  </ul>
+                  <li>
+                    In the case of data regarding patient or subjects of OUHSC and her affiliates, all users must comply with <a href="http://www.ouhsc.edu/hipaa">HIPAA</a> 
+                    Privacy Policies and Information Security for Protected Health Information (PHI) and Education Records covered under
+                    the Family Educational Rights and Privacy Act (FERPA). 
+                    (Continue reading about the campus's <a href="http://www.ouhsc.edu/hipaa">HIPAA policies</a> and <a href="http://it.ouhsc.edu/policies">IT Policies</a>.)
+                  </li>
                 </ul>
                 <h4>Policy</h4>
                 <p>Any authenticated user has a right to access REDCap, review public databases (e.g., demo databases) and create a new database or modify a database to which a corresponding authorization is granted (e.g., his/her own). Currently, the
