Converting REDCap login section to a list, and adding a tad more explanation.

--- a/WebpageDevelopment/index.html
+++ b/WebpageDevelopment/index.html
@@ -997,12 +997,17 @@
               </div>
               <div class="tab-pane fade in" id="access">
                 <h4>Accessing REDCap</h4>
-                <p>To request REDCap Support click <a href="https://miechvprojects.ouhsc.edu/redcap/surveys/?s=Zz5Qh4">here</a>.</p>
-                <p>For questions about REDCap, please email <a href="thomas-wilson@ouhsc.edu">Thomas Wilson.</a>
+                <p>
+                  To request REDCap Support click <a href="https://miechvprojects.ouhsc.edu/redcap/surveys/?s=Zz5Qh4">here</a>. 
+                  For questions about REDCap, please email <a href="thomas-wilson@ouhsc.edu">Thomas Wilson</a>.
+                </p>
                 <h4>Login to REDCap</h4>
-                <p><a href="https://bbmc.ouhsc.edu/">BBMC Customization Box</a></p>
-                <p><a href="https://rcapdev.ouhsc.edu/">Development Box</a></p>
-                <p><a href="https://redcap.ouhsc.edu/">Enterprise Box</a></p>
+                Choose the appropriate REDCap instance on campus:
+                <ul>
+                  <li><a href="https://bbmc.ouhsc.edu/">BBMC Box</a></li>
+                  <li><a href="https://rcapdev.ouhsc.edu/">Development Box</a></li>
+                  <li><a href="https://redcap.ouhsc.edu/">Enterprise Box</a></li>
+                </ul>
               </div>
               <div class="tab-pane fade in" id="policy">
                 <h4>Licensing</h4>
